WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144408
[Mac] Register with device picker whenever a page has <video>
https://bugs.webkit.org/show_bug.cgi?id=144408
Summary
[Mac] Register with device picker whenever a page has <video>
Eric Carlson
Reported
2015-04-29 14:00:17 PDT
Register with the device picker as long a page has <video> that can play to it.
Attachments
Proposed patch.
(2.75 KB, patch)
2015-04-29 14:56 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-04-29 14:00:46 PDT
<
rdar://problem/20718329
>
Eric Carlson
Comment 2
2015-04-29 14:56:15 PDT
Created
attachment 251989
[details]
Proposed patch.
WebKit Commit Bot
Comment 3
2015-04-29 16:04:57 PDT
Comment on
attachment 251989
[details]
Proposed patch. Clearing flags on attachment: 251989 Committed
r183587
: <
http://trac.webkit.org/changeset/183587
>
WebKit Commit Bot
Comment 4
2015-04-29 16:05:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug