[Mac] Register with device picker whenever a page has <video> https://bugs.webkit.org/show_bug.cgi?id=144408

Reviewed by Jer Noble.

* Modules/mediasession/WebMediaSessionManager.cpp:
(WebCore::WebMediaSessionManager::setPlaybackTarget): Drive-by fix: don't tell a client to play
to the target when it has not routes.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaState): Set RequiresPlaybackTargetMonitoring whenever the
element is <video> with a video track that does not block wireless playback.


Canonical link: https://commits.webkit.org/162427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183587 268f45cc-cd09-0410-ab3c-d52691b4dbfc